Add exception handle

--- a/src/main/resources/templates/products/create.html
+++ b/src/main/resources/templates/products/create.html
@@ -5,16 +5,14 @@
     <title>Create product</title>
 </head>
 <body>
-    <form method="post" action="products">
+    <form method="post" action="products" name="product">
         <div>
             <label>Name</label>
             <input type="text" name="name">
         </div>
         <div>
             <label>Description</label>
-            <textarea name="description" cols="3" >
-
-            </textarea>
+            <textarea name="description" cols="3"></textarea>
         </div>
         <div>
             <label>Price</label>
